--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -23,6 +23,9 @@ ext {
 
 dependencies {
 
+	//rabitmq 로 공통설정도 받아오게 한다고함.
+	implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
+
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
