--- a/ordering-service/build.gradle
+++ b/ordering-service/build.gradle
@@ -28,6 +28,8 @@ ext {
 }
 
 dependencies {
+	//rabitmq 로 공통설정도 받아오게 한다고함.
+	implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
