--- a/product-service/build.gradle
+++ b/product-service/build.gradle
@@ -28,6 +28,10 @@ ext {
 }
 
 dependencies {
+
+    //rabitmq 로 공통설정도 받아오게 한다고함.
+    implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
+
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
