--- a/gateway-service/src/main/resources/bootstrap.yml
+++ b/gateway-service/src/main/resources/bootstrap.yml
@@ -3,5 +3,6 @@ spring:
     name: gateway-service
   cloud:
     config:
-      uri: http://localhost:8888
+      #uri: http://localhost:8888
+      uri: http://config-service.default.svc.cluster.local:8888  # 쿠버네티스 용
       profile: default
