--- a/user-service/src/main/resources/bootstrap.yml
+++ b/user-service/src/main/resources/bootstrap.yml
@@ -1,5 +1,6 @@
 spring:
   cloud:
     config:
-      uri: http://localhost:8888
+      #uri: http://localhost:8888
+      uri: http://config-service.default.svc.cluster.local:8888  # 쿠버네티스 용
       profile: default
