--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
               - "http://localhost:5173" #사용자 프론트 서버
               - "http://localhost:9090" #관리자 프론트 로컬 서버
               - "https://say4team.shop" #AWS 사용자 정적 서버
-              - "https://say4teamadmin.shop" #AWS 관리자 정적 서버
+              - "http://say4teamadmin.shop" #AWS 관리자 정적 서버
 
             allowed-methods:
               - GET
