리다이렉트 경로 수정

--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
 oauth2:
   kakao:
     client-id: ba98e521fbb271a7148646b621c80c92
-    redirect-uri: http://localhost:8000/user-service/user/kakao
+    redirect-uri: https://api.say4team.shop/user-service/user/kakao
 
 
 
